--- a/src/views/DetailedExplanation/style.css
+++ b/src/views/DetailedExplanation/style.css
@@ -1,11 +1,12 @@
 .popupBody{
     background-color: rgba(0, 0,0, 0.1);
     /* height: 100%; */
-    position: absolute;
+    position: fixed;
     z-index: 99999;
     height: 100%;
     width: 100%;
-
+    top: 0%;
+    left: 0%;
     display: flex;
     align-items: center;
     justify-content: center;
